// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Router /> should notify previous route to hide and new one to show 1`] = `
<Router
  history={
    HistoryStack {
      "_events": Object {
        "EVENT_ENTRY_ACTIVE": [Function],
        "EVENT_ENTRY_ADDED": [Function],
        "EVENT_ENTRY_INACTIVE": [Function],
        "EVENT_ENTRY_REMOVED": [Function],
      },
      "_eventsCount": 4,
      "_maxListeners": undefined,
      "findHistoryIndexByKey": [Function],
      "getActive": [Function],
      "getLength": [Function],
      "stack": Array [
        Object {
          "key": "c123",
          "pathname": "/category/123",
        },
        Object {
          "immutableKey": "i123",
          "key": "i123",
          "pathname": "/item/123",
        },
      ],
    }
  }
>
  <div>
    <MockRoute
      mockAdd={
        [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "key": "c123",
                "pathname": "/category/123",
              },
              Object {
                "id": "123",
              },
              undefined,
            ],
          ],
        }
      }
      mockHide={
        [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "key": "c123",
                "pathname": "/category/123",
              },
              Object {
                "id": "123",
              },
              undefined,
            ],
          ],
        }
      }
      mockRemove={[Function]}
      mockShow={[Function]}
      path="/category/:id"
    />
    <MockRoute
      mockAdd={
        [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "immutableKey": "i123",
                "key": "i123",
                "pathname": "/item/123",
              },
              Object {
                "id": "123",
              },
              undefined,
            ],
          ],
        }
      }
      mockHide={[Function]}
      mockRemove={[Function]}
      mockShow={[Function]}
      path="/item/:id"
    />
  </div>
</Router>
`;

exports[`<Router /> should notify route about initial location 1`] = `
<Router
  history={
    HistoryStack {
      "_events": Object {
        "EVENT_ENTRY_ACTIVE": [Function],
        "EVENT_ENTRY_ADDED": [Function],
        "EVENT_ENTRY_INACTIVE": [Function],
        "EVENT_ENTRY_REMOVED": [Function],
      },
      "_eventsCount": 4,
      "_maxListeners": undefined,
      "findHistoryIndexByKey": [Function],
      "getActive": [Function],
      "getLength": [Function],
      "stack": Array [
        Object {
          "key": "c123",
          "pathname": "/category/123",
        },
      ],
    }
  }
>
  <MockRoute
    mockAdd={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "key": "c123",
              "pathname": "/category/123",
            },
            Object {
              "id": "123",
            },
            undefined,
          ],
        ],
      }
    }
    mockHide={[Function]}
    mockRemove={[Function]}
    mockShow={[Function]}
    path="/category/:id"
  />
</Router>
`;
